--- a/README
+++ b/README
@@ -1,13 +1,1 @@
-# learning
-
-FIXME: write description
-
-## Usage
-
-FIXME: write
-
-## License
-
-Copyright (C) 2012 FIXME
-
-Distributed under the Eclipse Public License, the same as Clojure.
+Just learning Clojure.
